gatekeeper/templates/k8sallowedtags.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedtags
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedTags
      validation:
        openAPIV3Schema:
          type: object
          properties:
            tags:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedtags
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          some i
          input.parameters.tags[i] == endswith(container.image, concat("", [":", input.parameters.tags[i]]))
          msg := sprintf("Image tag :%v không được phép sử dụng", [input.parameters.tags[i]])
        }
