gatekeeper/templates/k8scompulsorynonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8scompulsorynonroot
spec:
  crd:
    spec:
      names:
        kind: K8sCompulsoryNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scompulsorynonroot
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container %v không được phép chạy với quyền root (runAsUser: 0)", [container.name])
        }
