gatekeeper/templates/k8shostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8shostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shostnetwork
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "Ứng dụng bị cấm sử dụng cấu hình mạng hostNetwork: true"
        }
